2018-04-11  Danilo Chang

    * Bump version to 0.2
    * Add op_open_url support
    * Add sub-command getTags

2018-04-10  Danilo Chang

    * Implement opusfile command
    * Initial version
