@@ -1,3 +1,7 @@
+2018-05-09  Danilo Chang
+
+    * Add unknown option check
+
 2018-04-11  Danilo Chang
 
     * Bump version to 0.2
